<resources>
    <string name="app_name">ProjectTwoChristianClark</string>
    <string name="app_title">Weight Tracker</string>
    <string name="username">Username:</string>
    <string name="password">Password:</string>
    <string name="create_account">Create Account</string>
    <string name="login">Login</string>
    <string name="curr_weight">Current Weight:</string>
    <string name="weight_hint">Pounds</string>
    <string name="sms_perm">SMS Permission</string>
    <string name="card_date">Jan-01-1970</string>
    <string name="card_weight">135lb</string>
    <string name="sms_perm_explain">SMS Permissions: If you would like to have SMS text messages sent to your device, please grant SMS permissions to this application</string>
    <string name="perm_status">Current Permission Status: Off</string>
    <string name="request_sms_button">Request SMS Permission</string>
    <string name="label_date">Date</string>
    <string name="label_weight">Weight</string>
    <string name="label_delete">Delete</string>
    <string name="username_entry">Username Entry</string>
    <string name="password_entry">Password Entry</string>
    <string name="add_weight_button">Add current weight</string>
    <string name="sms_noti_icon">notification icon</string>
    <string name="delete_button_icon">Delete Weight Entry</string>
    <string name="creation_failed">Please enter a Username and Password</string>
    <string name="invalid_weight">Invalid Weight Entry</string>
    <string name="new_date">New Date:</string>
    <string name="goal_weight">Goal Weight:</string>
    <string name="remember_me">Remember Me</string>
    <string name="goal_weight_missing_or_corrupted">Goal weight missing or corrupted</string>
    <string name="no_current_weight_found">No current weight found</string>
    <string name="pounds">%1$.1f Pounds</string>
    <string name="remaining_pounds">Remaining:\n%1$.1f Pounds</string>
    <string name="permission_message">This app will send notifications when you get close to, or reach, your goal weight.</string>
    <string name="permission_title">Set Notification Permission</string>
    <string name="allow_button">Allow</string>
    <string name="deny_button">Deny</string>
    <string name="notification_channel">goal_alerts</string>
    <string name="notification_channel_description">Channel to send notifications for weight alerts</string>
    <string name="approaching_title">Almost There!</string>
    <string name="approaching_message">You\'re only %1$.1f pounds away!</string>
    <string name="reached_title">You Reached Your Goal</string>
    <string name="reached_message">You Finally Reached your goal weight!</string>
    <string name="error_invalid_weight">Invalid Weight Entry</string>
    <string name="missing_username_or_password">Missing Username or Password</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="something_went_wrong_accessing_the_internal_database">Something went wrong accessing the internal database</string>
    <string name="invalid_username_or_password">Invalid Username or Password</string>
    <string name="could_not_get_user_data">Could not get user data</string>
    <string name="could_not_add_new_weight">Could not add new weight</string>
    <string name="notification_permission_granted">Notification Permission Granted</string>
    <string name="notification_permission_denied">Notification Permission Denied</string>
    <string name="you_reached_your_goal">You Reached Your Goal!</string>
    <string name="weight_over_time">Weight Over Time</string>
    <string name="no_data_available">No Data Available</string>
    <string name="goal_weight_could_not_be_accessed">Goal Weight Could Not Be Accessed</string>
    <string name="goal_weight_not_found">Goal Weight Not Found</string>
    <string name="no_weights_in_database_to_compare_to">No weights in database to compare to</string>
    <string name="could_not_find_a_start_and_goal_weight">Could not find a start and goal weight.</string>
</resources>
