<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.SMSPermissionRequest"
    >

    <TextView
        android:id="@+id/explanation"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:text="@string/sms_perm_explain"
        android:textSize="20sp"
        android:textColor="@color/black"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/status_text"
        />

    <TextView
        android:id="@+id/status_text"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        app:layout_constraintTop_toBottomOf="@id/explanation"
        app:layout_constraintBottom_toTopOf="@id/button"
        android:textSize="20sp"
        android:text="@string/perm_status"
        android:textColor="@color/black"
        android:gravity="center"
        />

    <Button
        android:id="@+id/button"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        app:layout_constraintTop_toBottomOf="@id/status_text"
        android:text="@string/request_sms_button"
        android:layout_marginRight="48dp"
        android:layout_marginLeft="48dp"
        app:layout_constraintBottom_toBottomOf="parent"
        />

</androidx.constraintlayout.widget.ConstraintLayout>