<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp"
    >

    <LinearLayout
        android:id="@+id/goal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:padding="16dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/weightText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:gravity="center"
            android:text="@string/goal_weight"
            android:textColor="@color/black"
            android:textSize="28sp" />

        <EditText
            android:id="@+id/weightEntry"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_marginStart="8dp"
            android:layout_weight="3"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/weight_hint"
            android:inputType="numberDecimal" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/curr"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:layout_weight="4"
        android:gravity="center_vertical">

        <TextView
            android:id="@+id/currWeightText"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:gravity="center"
            android:text="@string/curr_weight"
            android:textColor="@color/black"
            android:textSize="28sp"
            />

        <EditText
            android:id="@+id/currWeightEntry"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:ems="10"
            android:layout_marginStart="8dp"
            android:layout_weight="3"
            android:gravity="center"
            android:hint="@string/weight_hint"
            android:inputType="numberDecimal"
            />
    </LinearLayout>

</LinearLayout>